<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/emailEditText"
            android:layout_marginBottom="100dp"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:layout_centerInParent="true"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_marginTop="22dp"
            android:layout_below="@id/emailEditText"/>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:layout_marginTop="48dp"
            android:layout_below="@id/passwordEditText" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>